# typstuml

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
benches/: cuca_layout.rs
components/: lib.typ
components/src/: atoms.typ  composites.typ  containers.typ  cuca.typ  flows.typ  palettes.typ  records.typ  seq-puml.typ  seq.typ  states.typ  tree.typ
components/src/cuca/: edges.typ  shape-card.typ  shape-desc.typ  theme.typ
components/src/internal/: metrics.typ  stroke.typ
crates/typstuml-plugin/: Cargo.toml  build.sh  package.sh
crates/typstuml-plugin/package/: README.md  lib.typ  typst.toml
crates/typstuml-plugin/src/: lib.rs
crates/typstuml-wasm/: Cargo.toml  README.md  build.sh  index.html  package.sh
crates/typstuml-wasm/src/: lib.rs
examples/: class.puml  flow.puml  m3-layered-architecture.puml  m3-nested-sibling-reorder.puml  m3-sibling-reorder.puml  render-typst.rs
src/: colors.rs  diagnostics.rs  lib.rs  main.rs  render.rs
src/cli/: mod.rs
src/codegen/: activity.rs  class.rs  common.rs  cuca.rs  json.rs  mindmap.rs  mod.rs  record_graph.rs  sequence.rs  state.rs  tree_emit.rs  tree_graph.rs  wbs.rs  yaml.rs
src/codegen/class/: emit.rs  geom.rs  layout.rs  probe.rs  route.rs  theme.rs
src/codegen/cuca/: elk.rs  emit.rs  geom.rs  layout.rs  probe.rs  route.rs  scope.rs  text.rs  theme.rs
src/codegen/state/: emit.rs  geom.rs  layout.rs  mod.rs  route.rs  view.rs
src/ir/: activity.rs  common.rs  cuca.rs  mod.rs  record.rs  sequence.rs  state.rs  tree.rs
src/layout/: curve.rs  dag.rs  edge_route.rs  geometry.rs  graph.rs  mod.rs  spacing.rs  swimlane.rs  tree.rs
src/layout/elk/: adapter.rs  compare.rs  graph.rs  mod.rs
src/layout/ortho/: astar.rs  grid.rs  mod.rs  post.rs  round.rs
src/layout/pathplan/: channel.rs  geometry.rs  mod.rs  polygon.rs  polynomial.rs  shortest.rs  spline.rs
src/layout/sugiyama/: bk.rs  cluster_rank.rs  compact.rs  edge_fix.rs  hierarchy.rs  mod.rs  ns.rs  port_align.rs  simple.rs  tighten.rs  verify.rs  xcoord.rs
src/parser/: activity.rs  class.rs  common.rs  cuca.rs  dispatcher.rs  json.rs  lexer.rs  mindmap.rs  mod.rs  preprocessor.rs  sequence.rs  state.rs  tree.rs  wbs.rs  yaml.rs
src/parser/activity/: blocks.rs  mod.rs  scan.rs  tests.rs
src/parser/class/: container.rs  entity.rs  note.rs  relation.rs  util.rs
src/parser/cuca/: build.rs  entity.rs  flavor.rs  member.rs  mod.rs  note.rs  relation.rs  tests.rs  util.rs
src/parser/sequence/: fragment.rs  message.rs  mod.rs  note.rs  participant.rs  scan.rs  tests.rs
src/parser/state/: element.rs  mod.rs  note.rs  scan.rs  tests.rs
src/runtime/: measure.rs  mod.rs  world.rs
src/runtime/fonts/: NOTICE
src/theme/: mod.rs
src/web/: mod.rs  tree.rs
tests/: activity.rs  cuca.rs  elk_port.rs  integration.rs  layout_invariants.rs  record_graph.rs  sequence.rs  state.rs  tree.rs  usecase.rs
tests/common/: mod.rs
tests/fixtures/activity/: action-shapes.puml  detach.puml  fork.puml  if-else.puml  if-elseif.puml  if-labels.puml  linear-pipeline.puml  linear.puml  multiline-action.puml  nested.puml  notes.puml  partition.puml  repeat-break.puml  repeat.puml  split.puml  swimlane-back.puml  swimlane-if.puml  swimlane-while.puml  swimlane.puml  switch.puml  while.puml
tests/fixtures/class/: annotations.puml  assoc.puml  basic.puml  cluster-rank-order.puml  cross-cluster.puml  desc-edge-labels.puml  desc-family.puml  enum.puml  generics.puml  heads.puml  hide.puml  lollipop.puml  nested-3.puml  notes.puml  object-basic.puml  package.puml  shapes-activity.puml  shapes-all.puml  shapes-deployment.puml  shapes-desc.puml  shapes-misc.puml  sibling-reorder.puml  sockets.puml  together.puml  transparent-ancestor.puml  with-members.puml
tests/fixtures/component/: 01-architecture.puml
tests/fixtures/json/: array-of-scalars.puml  nested-object.puml  null-empty.puml  person.puml
tests/fixtures/mindmap/: basic.puml  colors.puml  deep-tree.puml  indent.puml  markdown.puml  multiline-code.puml  orgmode.puml  style-classes.puml  ttb.puml
tests/fixtures/sequence/: activate.puml  alt.puml  arrow-styles.puml  auth-flow.puml  autonumber.puml  create-destroy.puml  divider.puml  group.puml  hello.puml  loop.puml  opt.puml  par.puml  return.puml  self-message.puml  styled.puml
tests/fixtures/state/: auto-create.puml  basic.puml  choice.puml  colors.puml  composite-nested.puml  composite.puml  concurrent-horizontal.puml  concurrent-vertical.puml  deep-history.puml  direction-lr.puml  entry-exit.puml  floating-note.puml  fork-join.puml  history.puml  labels-eg-action.puml  multiline-label.puml  note-on-link.puml  notes.puml  self-transition.puml  synchro-bar.puml
tests/fixtures/usecase/: actor-generalization.puml  basic.puml  direction-lr.puml  include-extend.puml  multi-actor.puml  notes.puml  shorthand-inline.puml  shorthand-top-level.puml  system-boundary.puml
tests/fixtures/wbs/: basic.puml  colors.puml  multiline.puml  pseudo-node.puml  sides.puml  skip-layer.puml
tests/fixtures/yaml/: list-of-strings.puml  mixed-types.puml  nested-map.puml  person.puml
tests/golden/activity/: action-shapes.typ.golden  detach.typ.golden  empty-else.typ.golden  fork.typ.golden  if-else.typ.golden  if-elseif.typ.golden  if-labels.typ.golden  linear-pipeline.typ.golden  linear.typ.golden  multiline-action.typ.golden  nested.typ.golden  notes.typ.golden  partition.typ.golden  repeat-break.typ.golden  repeat.typ.golden  split.typ.golden  swimlane-back.typ.golden  swimlane-if.typ.golden  swimlane-while.typ.golden  swimlane.typ.golden  switch.typ.golden  while.typ.golden
tests/golden/class/: annotations.typ.golden  assoc.typ.golden  basic.typ.golden  cluster-rank-order.typ.golden  cross-cluster.typ.golden  desc-edge-labels.typ.golden  desc-family.typ.golden  enum.typ.golden  generics.typ.golden  heads.typ.golden  hide.typ.golden  lollipop.typ.golden  nested-3.typ.golden  notes.typ.golden  object-basic.typ.golden  package.typ.golden  shapes-activity.typ.golden  shapes-all.typ.golden  (+8 more)
web/tree-viewer/: README.md  index.html  style.css  viewer.js
(+104 files in other folders)
