[package]
name = "typstuml"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TypstUML — render PlantUML diagrams via Typst (Rust + blockcell)"
repository = "https://github.com/daleione/typstuml"
readme = "README.md"
keywords = ["plantuml", "typst", "diagram", "cli", "uml"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "typstuml"
path = "src/main.rs"

[lib]
name = "typstuml"
path = "src/lib.rs"

[dependencies]
typst = "0.14.2"
typst-svg = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }

clap = { version = "4.5", features = ["derive"] }
include_dir = "0.7"
thiserror = "2"
time = { version = "0.3", features = ["std", "local-offset"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
notify = "8"
notify-debouncer-full = "0.7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
