[workspace]
members = ["crates/typstuml-wasm", "crates/typstuml-plugin"]
# Plain `cargo build` / `cargo test` only touch the root crate — both
# wasm crates are opt-in (`-p typstuml-wasm` for the browser playground,
# `-p typstuml-plugin` for the Typst-package plugin) and only build for
# wasm32.
default-members = ["."]

[package]
name = "typstuml"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TypstUML — render PlantUML diagrams via Typst (Rust + blockcell)"
repository = "https://github.com/daleione/typstuml"
readme = "README.md"
keywords = ["plantuml", "typst", "diagram", "cli", "uml"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "typstuml"
path = "src/main.rs"

[lib]
name = "typstuml"
path = "src/lib.rs"

# Dependencies shared by every target. The Typst crates, codegen helpers,
# and the parsers are all wasm-friendly.
#
# The `typst*` crates are optional and gated behind the `embed-typst`
# feature (on by default). Disabling it strips out
# `runtime::{world, render}` and the `runtime::measure::run` machinery —
# leaving only the parser → IR → layout → codegen path plus the
# `Measurement` / `MeasurementSet` data types. That trimmed surface is
# what `crates/typstuml-plugin` builds against (see its Cargo.toml).
[features]
default = ["embed-typst"]
embed-typst = ["dep:typst", "dep:typst-svg", "dep:typst-pdf", "dep:typst-render", "dep:include_dir"]

[dependencies]
typst = { version = "0.14.2", optional = true }
typst-svg = { version = "0.14.2", optional = true }
typst-pdf = { version = "0.14.2", optional = true }
typst-render = { version = "0.14.2", optional = true }
include_dir = { version = "0.7", optional = true }
thiserror = "2"
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"

# Native-only: the CLI (clap), file-watching (notify), wall-clock time, and
# the system font searcher all need a real OS underneath them. `typst-kit`
# stays target-gated rather than feature-gated — it's harmless when
# embed-typst is off on native (just an unused dep) and never appears on
# wasm to begin with, so the typstuml-plugin wasm build doesn't see it.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", features = ["std", "local-offset"] }
notify = "8"
notify-debouncer-full = "0.7"

# wasm32: no font searcher. Fonts are vendored under `src/runtime/fonts/` and
# baked in via `include_bytes!` — see `EMBEDDED_FONTS` in `runtime::world`. We
# deliberately do NOT pull `typst-assets` here: its `fonts` feature embeds the
# whole 8.4 MB set (including 3.3 MB of math fonts) with no way to subset.
[target.'cfg(target_arch = "wasm32")'.dependencies]

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"
predicates = "3"
tempfile = "3"

[[bench]]
name = "cuca_layout"
harness = false

# Size-optimized profile for the wasm artifact, built via
# `wasm-pack build --profile wasm-release`. Native builds are untouched —
# `cargo build --release` for the CLI still uses the default release profile,
# so the layout/render hot paths keep `opt-level = 3`.
[profile.wasm-release]
inherits = "release"
opt-level = "z"      # optimize for size over speed
lto = "fat"          # cross-crate dead-code elimination
codegen-units = 1    # better optimization at the cost of compile time
strip = true         # drop symbol names and debug info
panic = "abort"      # no unwinding tables (console_error_panic_hook still fires)
